Extract MoodleCellRenderer and add missing change for Java 8 support